[package]
name = "meshed-iam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
serde = "1.0.188"
futures = "0.3.28"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.0" }
hyper = { version = "1.1.0", features = ["full"] }
log = { version = "0.4.20" }
serde_json = { version = "1.0.95" }
tokio = { version = "1.27.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
